--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,8 @@
-@import 'colors';
-@import 'layout';
+@import 'variables';
+@import 'mixin';
 @import 'transition';
+@import 'element-ui';
+@import 'btn';
 
 html {
   font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
