add tag arrow fix header

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,17 +9,19 @@ html {
   font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
   font-size: 14px;
   line-height: 1.2;
+  box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  padding: 0;
   min-width: 1020px;
   word-wrap: break-word;
 }
 
 html, body {
   height: 100%;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 #app {
@@ -64,6 +66,12 @@ p {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
 a:focus,
