--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -133,6 +133,7 @@ div:focus {
 //main-container全局样式
 .app-container {
   padding: 20px;
+  height: 100%;
   &.bg-color {
     background-color: #f0f2f5;
   }
