--- a/src/styles/_element-ui.scss
+++ b/src/styles/_element-ui.scss
@@ -125,3 +125,12 @@
     height: 30px;
   }
 }
+
+.vue-treeselect__multi-value {
+  line-height: 18px;
+}
+
+.vue-treeselect__menu {
+  font-size: 12px;
+  color: #606266;
+}
